# barley

./: .gitignore  Cargo.toml  Makefile  README.md  attach-disk  barley-ca.service  barley-ip  barley-ip.service  barley-machine-key.service  barley-register  barley-register.service  barley-ssh-ca.service  barley.pkr.hcl  barley.service  dnsmasq.conf  make-initramfs  no-ipv6.sh  pxelinux.cfg  qemu-seed.service  register-barley-seed  register-barley-seed.service  seed.ipxe  sower.nspawn  ssh-host-key.conf  ssh-host-key.service  test-seed  update-barley-ipaddress.service  update-sower-ipaddress  update-sower-ipaddress.service  zap-disk
network/: 30-br0-bind.network  40-br0.network
packer/: base.pkr.hcl  cryptpad.config.js  cryptpad.nginx.conf  cryptpad.pkr.hcl  cryptpad.service  cryptpad.sh  envoy.pkr.hcl  mastodon.pkr.hcl  mastodon.sh  nginx.pkr.hcl  postgres.pkr.hcl  seed.pkr.hcl  sower.pkr.hcl  synapse.pkr.hcl
packer/barley/: barley.pkr.hcl
packer/envoy/: envoy.pkr.hcl
packer/postgres/: postgres.pkr.hcl
packer/synapse/: synapse.pkr.hcl
src/: lib.rs  main.rs  ssh.rs  tls.rs
