[package]
name = "barley"
version = "0.1.0"
authors = ["Dmitry Borodaenko <angdraug@debian.org>"]
edition = "2018"

[dependencies]
actix-files = "0.5"
actix-web = "3"
chrono = "0.4"
env_logger = "0.8"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
version-compare = "*"

[profile.release]
lto = true
